test/results/afl-crash-7.owltest.stderr
error: unexpected token '|' while parsing grammar

  a=['([''0'|['('('')']']''((''['x'((''))']']'')(['([''0['|(('0'))'0]']((['['(('
            ~                                                                   

